testdata/bad/timestamp_43.ion
2004-12-11T12:10:1+08:00
